--- a/src/admin.html
+++ b/src/admin.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<meta name="google-signin-client_id" content="902871525839-p05ss41m2r4pmi7i9u7iq64cbsc3j3co.apps.googleusercontent.com">
+		<meta name="google-signin-client_id" content="902871525839-ouvcfp2v9qls8qte2dqd85mocuna3gif.apps.googleusercontent.com">
 		<title> Digital Palengke</title>
 		<link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="materialize-css/css/materialize.min.css">
@@ -12,17 +12,6 @@
 	</head>
 
 	<body>
-		<!-- <div id="sidenav" class="side-nav fixed" style="text-align: center; padding-top: 2%;">
-			<img id="logo" src="public/images/logo.png" alt="logo" style="width: 150px; height: 150px;"/>
-			<br><br>
-			<div class="navdiv">
-				<a class="waves-effect waves-light btn-flat modal-trigger" onclick="uploadForm()">Add Product</a>
-			</div>	
-			<div class="navdiv">
-				<a class="waves-effect waves-light btn-flat modal-trigger" onclick="uploadForm()">Sign Out</a>
-			</div>	
-		</div> -->
-
 		<div class="side-nav fixed">
 			<div class="container">
 				<div class="row" style="margin-top: 7%;">
@@ -37,7 +26,7 @@
 					<a class="waves-effect waves-light btn-flat modal-trigger" onclick="uploadForm()">Add Product</a>
 				</div>	
 				<div class="navdiv">
-					<a class="waves-effect waves-light btn-flat modal-trigger" onclick="uploadForm()">Sign Out</a>
+					<a class="waves-effect waves-light btn-flat modal-trigger" onclick="signOut()">Sign Out</a>
 				</div>	
 			
 		</div>
@@ -55,23 +44,23 @@
 				Add a Product 
 			</div>
 			<div class="modal-content">
-		      <form>
+		      <form id="submitProductForm">
 		      	<div class="row">
 		      		<div class="input-field col s4">
 		      			<i class="medium material-icons prefix">group</i>
-		      			<input id="grp_number" type="number" min="1" max="27" class="validate">
+		      			<input id="groupNum" type="number" min="1" max="27" class="validate">
 		      			<label for="grp_number"> Group #</label>
 		      		</div>	
 				    <div class="input-field col s8">
 				    	<i class="medium material-icons prefix">web</i>
-				    	<input id="prod_name" type="text" class="validate">
+				    	<input id="productName" type="text" class="validate">
 				    	<label for="prod_name">Product Name</label>
 				    </div>
 				</div>
 				<div class="row">
 					<div class="input-field col s12">
 			        	<i class="medium material-icons prefix">mode_edit</i>
-			        	<textarea id="prod_description" class="materialize-textarea"></textarea>
+			        	<textarea id="productDesc" class="materialize-textarea"></textarea>
 			        	<label for="icon_prefix2">Product Description</label>
 			        </div>
 				</div>
@@ -81,14 +70,14 @@
 			        <input type="file">
 			      </div>
 			      <div class="file-path-wrapper col s10">
-			        <input class="file-path validate" type="text" placeholder="Add file">
+			        <input id="imageFile" class="file-path validate" type="text" placeholder="Add file">
 
 			      </div>
 			    </div>
 			     <div class="row" style="text-align: right;">
 			     	<div class="input-field col s12">
 			     		 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat" style="color: black;">Cancel</a>
-			     		<input id="submit_btn" class="btn waves-effect waves-light validate yellow lighten-1" type="submit" value="Submit"/>
+			     		<input id="submitBtn" class="btn waves-effect waves-light validate yellow lighten-1" type="submit" value="Submit"/>
 			     	</div>
 			     </div>
 		      </form>
