--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 
 <html lang="en">
 	<head>
-		<meta name="google-signin-client_id" content="902871525839-p05ss41m2r4pmi7i9u7iq64cbsc3j3co.apps.googleusercontent.com">
+		<meta name="google-signin-client_id" content="902871525839-ouvcfp2v9qls8qte2dqd85mocuna3gif.apps.googleusercontent.com">
 		<title> Digital Palengke</title>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};HandleGoogleApiLibrary();" onreadystatechange="if (this.readyState === 'complete') this.onload()"></script>
 		<link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="materialize-css/css/materialize.min.css">
 		<link rel="stylesheet" href="public/stylesheets/index.css">
@@ -25,16 +27,16 @@
 				</div>
 				<div class="divider"></div>
 				<div class="col s6" style="padding-left: 15%;">				
-					<a class="waves-effect waves-light btn modal-trigger" onclick="admin()">Admin</a>
+					<a class="waves-effect waves-light btn modal-trigger" id="login_admin" onclick="admin()">Admin</a>
 				</div>
 				<div class="col s6" style="padding-right: 15%;">			
-					<a class="waves-effect waves-light btn modal-trigger" onclick="student()">Student</a>
+					<a class="waves-effect waves-light btn modal-trigger" id="login_student" onclick="student()">Student</a>
 				</div>	
 			</div>
 		</div>
 
-		<!-- LOGIN ADMIN Modal-->
-		<!-- <div id="modal1" class="modal">
+		<!-- LOGIN ADMIN Modal -->
+		<div id="modal1" class="modal">
 		    <div class="modal-content">
 		      <h4>Login as Administrator</h4>
 		      <div class="g-signin2" data-onsuccess="onSignIn" style="width: 150px; height: 50px;"></div>
@@ -42,10 +44,10 @@
 		    <div class="modal-footer">
 		      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">CANCEL</a>
 		    </div>
-		 </div> -->
+		 </div>
 
-		<!-- LOGIN STUDENT Modal-->
-		<!-- <div id="modal2" class="modal">
+		 <!-- LOGIN STUDENT Modal -->
+		<div id="modal2" class="modal">
 		    <div class="modal-content">
 		      <h4>Login as Student</h4>
 		      <div class="g-signin2" data-onsuccess="onSignIn" style="width: 150px; height: 50px;"></div>
@@ -53,14 +55,16 @@
 		    <div class="modal-footer">
 		      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">CANCEL</a>
 		    </div>
-		 </div> -->
+		 </div>
 
+
+		 <div class="userContent">HELLO! </div>
 		
+ 
 		<!-- Javascripts -->
+		<script src="public/javascripts/index.js"></script>
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
-		<script src="https://apis.google.com/js/platform.js" async defer></script>
-  		<script src="materialize-css/js/materialize.min.js"></script>
-		<script src="public/javascripts/index.js"></script>
+  		<script src="materialize-css/js/materialize.min.js"></script>		
 	</body>
 </html>
