--- a/src/admin.html
+++ b/src/admin.html
@@ -76,7 +76,7 @@
 			    </div>
 			     <div class="row" style="text-align: right;">
 			     	<div class="input-field col s12">
-			     		 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat" style="color: black;">Cancel</a>
+			     		 <a class="modal-close waves-effect waves-green btn-flat" style="color: black;">Cancel</a>
 			     		<input id="submitBtn" class="btn waves-effect waves-light validate yellow lighten-1" type="submit" value="Submit"/>
 			     	</div>
 			     </div>
