converted products to json file

--- a/src/admin.html
+++ b/src/admin.html
@@ -20,13 +20,13 @@
 			</div>
 			<div class="row" style="margin-left: 2%;">
 				<div class="col s12"> <h4> Hi, Admin! </h4> </div>
-				<div class="col s12"> <h6> Total Number of Products</h6><b>0</b> </div>
+				<div class="col s12"> <h6> Total Number of Products</h6><b id='count'>0</b> </div>
 			</div>	
 				<div class="navdiv">
 					<a class="waves-effect waves-light btn-flat modal-trigger" onclick="uploadForm()">Add Product</a>
 				</div>	
 				<div class="navdiv">
-					<a class="waves-effect waves-light btn-flat modal-trigger" onclick="signOut()">Sign Out</a>
+					<a class="waves-effect waves-light btn-flat modal-trigger" onclick="save()">Save</a>
 				</div>	
 			
 		</div>
