--- a/src/admin.html
+++ b/src/admin.html
@@ -21,10 +21,7 @@
 			<div class="row" style="margin-left: 2%;">
 				<div class="col s12"> <h4> Hi, Admin! </h4> </div>
 				<div class="col s12"> <h6> Total Number of Products</h6><b id='count'>0</b> </div>
-			</div>	
-				<div class="navdiv">
-					<a class="waves-effect waves-light btn-flat modal-trigger" onclick="viewProducts()">View Products</a>
-				</div>	
+			</div>
 				<div class="navdiv">
 					<a class="waves-effect waves-light btn-flat modal-trigger" onclick="uploadForm()">Add Product</a>
 				</div>	
@@ -70,10 +67,10 @@
 				 <div class="file-field input-field">
 			      <div class="btn" style="background-color: darkgrey;">
 			        <span> FILE </span>
-			        <input type="file">
+			        <input type="file" id='image' accept=".jpg, .jpeg, .png">>
 			      </div>
 			      <div class="file-path-wrapper col s10">
-			        <input id="imageFile" class="file-path validate" type="text" placeholder="Add file">
+			        <input id='filename' class="file-path validate" type="text" placeholder="Add file">
 
 			      </div>
 			    </div>
