--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="divider"></div>
 				<div class="col s6" style="padding-left: 15%;">				
-					<a class="waves-effect waves-light btn modal-trigger" id="login_admin" onclick="admin()">Admin</a>
+					<a href= '/admin' class="waves-effect waves-light btn modal-trigger" id="login_admin" onclick="admin()">Admin</a>
 				</div>
 				<div class="col s6" style="padding-right: 15%;">			
 					<a class="waves-effect waves-light btn modal-trigger" id="login_student" onclick="student()">Student</a>
