added functionalities for student page

--- a/src/student.html
+++ b/src/student.html
@@ -20,8 +20,11 @@
 			</div>
 			<div class="row" style="margin-left: 2%;">
 				<div class="col s12"> <h4> Hi, Student! </h4> </div>
-				<div class="col s12"> <h6> Alloted Money for Investments</h6><b>$100,000</b>  </div>
 				<div class="col s12"> <h6> Your current balance </h6><b id='balance'></b> </div>
+			</div>
+			<div class="row" style="margin-left: 2%;">
+				<div class="col s12"> <h5> Products - Amount </h5> </div>
+				<div class="col s12" id="products"> </div>
 			</div>
 		</div>
 
