--- a/src/index.html
+++ b/src/index.html
@@ -59,10 +59,10 @@
 		      <div> 
 		      	<form id="formPIN">
 		      		<div class="row col s4">
-			      		<input type="text" name="studentnum" placeholder="Student Number" id="studentNumber">
+			      		<input required type="text" name="studentnum" placeholder="Student Number" id="studentNumber">
 			    	</div>
 		      		<div class="row col s4">
-			      		<input type="text" name="studentpin" placeholder="PIN" id="studentPIN">
+			      		<input required type="text" name="studentpin" placeholder="PIN" id="studentPIN">
 			    	</div>
 			    	<div class="row" style="text-align: right;">
 			    		<input value="LOGIN" type="submit" id="submitPIN">
