fixed signup and sessions

--- a/src/student.html
+++ b/src/student.html
@@ -28,7 +28,7 @@
 				<button id='checkout' class='waves-effect waves-light btn-flat modal-trigger'>Checkout</button>
 			</div>
 			<div class='navdiv'>
-				<a class='waves-effect waves-light btn-flat modal-trigger' href='/'>Sign Out</a>
+				<a class='waves-effect waves-light btn-flat modal-trigger' href='/api/student/logout'>Sign Out</a>
 			</div>	
 		</div>
 
