--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,8 @@
 				<div class="col s6" style="padding-left: 15%;">				
 					<a class="waves-effect waves-light btn modal-trigger" id="login_admin" onclick="admin()">Admin</a>
 				</div>
-				<div class="col s6" style="padding-right: 15%;">											 					<a class="waves-effect waves-light btn modal-trigger" id="login_student" onclick="student()">Student</a>
+				<div class="col s6" style="padding-right: 15%;">
+					<a class="waves-effect waves-light btn modal-trigger" id="login_student" onclick="student()">Student</a>
 				</div>	
 			</div>
 		</div>
@@ -56,25 +57,27 @@
 
 		 <!-- LOGIN STUDENT Modal -->
 		<div id="modal2" class="modal">
-		    <div class="modal-content">
-		      <h4>Login as Student</h4>
-		      <div> 
-		      	<form id="formPIN">
-		      		<div class="row col s4">
-			      		<input required type="text" name="studentnum" placeholder="Student Number" id="studentNumber">
-			    	</div>
-		      		<div class="row col s4">
-			      		<input required type="text" name="studentpin" placeholder="PIN" id="studentPIN">
-			    	</div>
-			    	<div class="row" style="text-align: right;">
-			    		<input value="LOGIN" type="submit" id="submitPIN">
-			    	</div>  
-			    </form>
-		    </div>
+		  <div class="modal-content">
+		    <h4>Login as Student</h4>
+		    <div class="row center">
+					<form class="col s12" id="studentLogIn">
+					    <div class="row">
+					        <div class="input-field col s11">
+					          <input required id="pin" type="text" class="validate">
+					          <label for="pin">PIN</label>
+					        </div>
+					    </div> 
+			      	<div class="row center">
+			        	<div class="input-field col s12">
+				          <input value="Login" type="submit" class="btn waves-effect waves-light validate lighten-1">
+				        </div>
+			      	</div> 
+					</form>
+				</div>
+		  </div>
 		 </div>
 	 
 		<!-- Javascripts -->
-		<script src="public/javascripts/index.js"></script>
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
   	<script src="materialize-css/js/materialize.min.js"></script>		
