--- a/src/admin.html
+++ b/src/admin.html
@@ -84,8 +84,8 @@
 		</div>    
 
 		<!-- Javascripts -->
-		<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 		<script src='jquery/jquery.min.js'></script>
+		<script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 		<script src='materialize-css/js/materialize.min.js'></script>
 		<script src='public/javascripts/admin.js'></script>
 	</body>
