--- a/src/index.html
+++ b/src/index.html
@@ -40,18 +40,25 @@
 			</div>
 		</div>
 
-		<!-- LOGIN ADMIN Modal-->
+		 <!-- LOGIN ADMIN Modal-->
 		<div id="modal1" class="modal">
 		    <div class="modal-content">
-		      <h4>Login as Administrator</h4>
-		      <form id="formAdmin">
-		      		<div class="row col s4">
-			      		<input required type="password" name="adminpass" placeholder="Password" id="adminPassword">
-			    	</div>
-			    	<div class="row" style="text-align: right;">
-			    		<input value="LOGIN" type="submit" id="submitPIN">
-			    	</div>  
-			    </form>
+		      	<h4>Login as Administrator</h4>
+		       	<div class="row center">
+					<form class="col s12" id="formAdmin">
+				    	<div class="row">
+				        	<div class="input-field col s11">
+					          <input required type="password" name="adminpass" placeholder="Password" id="adminPassword">
+					          <label for="adminPassword">Password</label>
+					        </div>
+					    </div> 
+			      	<div class="row center">
+			        	<div class="input-field col s12">
+				          <input value="Login" type="submit" class="btn waves-effect waves-light validate lighten-1">
+				        </div>
+			      	</div> 
+					</form>
+				</div>
 		    </div>
 		 </div>	
 
