fixed delete function

--- a/src/admin.html
+++ b/src/admin.html
@@ -26,7 +26,7 @@
 				<a class='waves-effect waves-light btn-flat modal-trigger' onclick='uploadForm()'>Add Product</a>
 			</div>	
 			<div class='navdiv'>
-				<a class='waves-effect waves-light btn-flat modal-trigger' href='/'>Sign Out</a>
+				<a class='waves-effect waves-light btn-flat modal-trigger' href='/api/admin/logout'>Sign Out</a>
 			</div>	
 			
 		</div>
