fixed file for students investments and admin session

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
 		<div id="modal1" class="modal">
 		    <div class="modal-content">
 		      <h4>Login as Administrator</h4>
-		      <form id="formAdmin">
+		      <form id="adminLogIn">
 		      		<div class="row col s4">
-			      		<input required type="password" name="adminpass" placeholder="Password" id="adminPassword">
+			      		<input required type="password" id="password" class="validate" placeholder="Password">
 			    	</div>
 			    	<div class="row" style="text-align: right;">
 			    		<input value="LOGIN" type="submit" id="submitPIN">
