--- a/src/student.html
+++ b/src/student.html
@@ -42,6 +42,7 @@
 		
 		<!-- Javascripts -->
 		<script src="jquery/jquery.min.js"></script>
+		<script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 		<script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
 		<script src="materialize-css/js/materialize.min.js"></script>
 		<script src="public/javascripts/student.js"></script>
