updated student functionalities

--- a/src/student.html
+++ b/src/student.html
@@ -22,7 +22,10 @@
 			</div>
 			<div class="row" style="margin-left: 2%;">
 				<div class="col s12"> <h5> Products - Amount </h5> </div>
+			</div>
+			<div class="row" style="margin-left: 2%;">	
 				<div class="col s12" id="products"> </div>
+				<!-- <div class="col s6" id="removebtns" style="background-color: green; text-align: left;"> </div> -->
 			</div>
 			<div class='navdiv'>
 				<button id='checkout' class='waves-effect waves-light btn-flat modal-trigger'>Checkout</button>
