--- a/src/student.html
+++ b/src/student.html
@@ -28,10 +28,10 @@
 				<!-- <div class="col s6" id="removebtns" style="background-color: green; text-align: left;"> </div> -->
 			</div>
 			<div class='navdiv'>
-				<button id='checkout' class='waves-effect waves-light btn-flat modal-trigger'>Checkout</button>
+				<a class='waves-effect waves-light btn-flat modal-trigger' href='/api/student/logout'>Sign Out</a>
 			</div>
 			<div class='navdiv'>
-				<a class='waves-effect waves-light btn-flat modal-trigger' href='/api/student/logout'>Sign Out</a>
+				<button id='checkout' class='waves-effect waves-light btn-flat modal-trigger'>Checkout and Finalize</button>
 			</div>	
 		</div>
 
