--- a/src/student.html
+++ b/src/student.html
@@ -28,7 +28,7 @@
 				<!-- <div class="col s6" id="removebtns" style="background-color: green; text-align: left;"> </div> -->
 			</div>
 			<div class='navdiv'>
-				<button id='checkout' class='waves-effect waves-light btn-flat modal-trigger'>Checkout</button>
+				<button id='checkout' class='waves-effect waves-light btn-flat modal-trigger'>Finalize</button>
 			</div>
 			<div class='navdiv'>
 				<a class='waves-effect waves-light btn-flat modal-trigger' href='/api/student/logout'>Sign Out</a>
