--- a/src/student.html
+++ b/src/student.html
@@ -19,7 +19,7 @@
 				<div class="col s12"> <h5> Current balance </h5><b id='balance'></b> </div>
 				<div class="col s12"> <h5> Receipt </h5></div>
 			</div>
-			<div class="row" style="margin-left: 2%;">
+			<div class="row">
 				<div class="col s12" id="products" style="height: 200px; overflow-y: scroll; border: 1px solid;"> </div>
 			</div>
 			<div class='navdiv'>
